[gd_scene load_steps=9 format=3 uid="uid://hyltfkj2b68x"]

[ext_resource type="PackedScene" uid="uid://bos1iabv14thx" path="res://scenes/animal_picker.tscn" id="1_c6p8v"]
[ext_resource type="Script" path="res://scripts/main_controller.gd" id="1_nbi13"]
[ext_resource type="PackedScene" uid="uid://bvu8vga3thi6q" path="res://scenes/battle.tscn" id="2_bx76x"]
[ext_resource type="Script" path="res://scripts/UI/deck_pick_container.gd" id="2_talbd"]
[ext_resource type="PackedScene" uid="uid://b001y6er7gm6b" path="res://scenes/animal_button.tscn" id="3_1lnos"]
[ext_resource type="Script" path="res://scripts/animal_loader.gd" id="3_6f6c1"]
[ext_resource type="Script" path="res://scripts/UI/battle_start_tab_controller.gd" id="5_s7n2g"]
[ext_resource type="Script" path="res://scripts/UI/animal_list.gd" id="6_3ghmb"]

[node name="Main" type="Node3D" node_paths=PackedStringArray("main_menu_control", "battle_control", "animal_picker", "deck_pick_container", "animal_loader", "animal_hand_picker", "battle_holder", "camera")]
script = ExtResource("1_nbi13")
main_menu_control = NodePath("LayoutController/MainMenuControl")
battle_control = NodePath("LayoutController/BattleControl")
animal_picker = NodePath("LayoutController/MainMenuControl/TabContainer/DeckPickTab/AnimalPicker")
deck_pick_container = NodePath("LayoutController/MainMenuControl/TabContainer/DeckPickTab/DeckPickContainer")
animal_loader = NodePath("AnimalLoader")
animal_hand_picker = NodePath("LayoutController/BattleControl/AnimalPicker")
battle_scene = ExtResource("2_bx76x")
battle_holder = NodePath("BattleHolder")
camera = NodePath("Camera3D")

[node name="BattleHolder" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.210165, 0.977666, 0, -0.977666, 0.210165, 0, 2.95685, 1.48885)

[node name="LayoutController" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuControl" type="Control" parent="LayoutController"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="LayoutController/MainMenuControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeckPickTab" type="VBoxContainer" parent="LayoutController/MainMenuControl/TabContainer"]
layout_mode = 2

[node name="DeckPickContainer" type="GridContainer" parent="LayoutController/MainMenuControl/TabContainer/DeckPickTab"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5
script = ExtResource("2_talbd")
chosen_animal_button_scene = ExtResource("3_1lnos")

[node name="AnimalPicker" parent="LayoutController/MainMenuControl/TabContainer/DeckPickTab" instance=ExtResource("1_c6p8v")]
layout_mode = 2

[node name="BattleStartTab" type="VBoxContainer" parent="LayoutController/MainMenuControl/TabContainer" node_paths=PackedStringArray("animal_preview_list", "animal_deck")]
visible = false
layout_mode = 2
script = ExtResource("5_s7n2g")
tab_index = 1
animal_preview_size = Vector2i(100, 100)
animal_preview_list = NodePath("AnimalList")
animal_deck = NodePath("../DeckPickTab/DeckPickContainer")

[node name="StartButton" type="Button" parent="LayoutController/MainMenuControl/TabContainer/BattleStartTab"]
layout_mode = 2
text = "Start"

[node name="AnimalList" type="GridContainer" parent="LayoutController/MainMenuControl/TabContainer/BattleStartTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
script = ExtResource("6_3ghmb")
animal_button_scene = ExtResource("3_1lnos")

[node name="BattleControl" type="Control" parent="LayoutController"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimalPicker" parent="LayoutController/BattleControl" instance=ExtResource("1_c6p8v")]
layout_mode = 1
offset_top = -151.0

[node name="StartFightButton" type="Button" parent="LayoutController/BattleControl"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "START FIGHT"

[node name="AnimalLoader" type="Node" parent="."]
script = ExtResource("3_6f6c1")

[connection signal="tab_changed" from="LayoutController/MainMenuControl/TabContainer" to="LayoutController/MainMenuControl/TabContainer/BattleStartTab" method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="LayoutController/MainMenuControl/TabContainer/BattleStartTab/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LayoutController/BattleControl/StartFightButton" to="." method="_on_start_fight_button_pressed"]
